--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <header>
         <!-- header-top -->
+        <div class="header-top d-flex justify-content-end">
+            <img class="p-2 " src="./img/sony_logo.svg" alt="">
+        </div>
         <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
