--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <!-- brand -->
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">
+                  <img src="./img/play_logo.svg" alt="">
+              </a>
               <!-- menu -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                    <span class="navbar-toggler-icon"></span>
@@ -28,18 +30,31 @@
               <!-- lista -->
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                   <!-- dropdown -->
-                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                      </a>
-                      <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          </ul> -->
-                  </li>
+                    <!-- dropdown -->
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Giochi</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Hardware</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Servizi</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Novità</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Fai acquisti</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
+                    <li class="d-flex ms-3">
+                        <a href="/" id="navbarDropdown">Supporto</a>
+                        <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
+                    </li>
 
                 </ul>
                 <div class="d-flex">
