--- a/index.html
+++ b/index.html
@@ -57,10 +57,20 @@
                     </li>
 
                 </ul>
-                <div class="d-flex">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
+                <div>
+                    <ul class="mb-2 mb-lg-0 d-flex">
+                        <li class="align-self-center">
+                            <a href="/">My PLayStation</a>
+                        </li>
+                        <li class="ms-4">
+                            <button type="button" class="pl-button fw-bold">Accedi</button>
+                        </li>
+                        <li class="ms-4 align-self-center">
+                            <a href="/">
+                                <img class="lens" src="./img/lens.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
               </div>
             </div>
