--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               </button>
               <!-- lista -->
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <!-- sinistra -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <!-- dropdown -->
                     <li class="d-flex ms-3">
@@ -57,10 +58,11 @@
                     </li>
 
                 </ul>
+                <!-- destra -->
                 <div>
-                    <ul class="mb-2 mb-lg-0 d-flex">
+                    <ul class="mb-2 mb-lg-0 d-flex ps-0">
                         <li class="align-self-center">
-                            <a href="/">My PLayStation</a>
+                            <a href="/" class="navbar-rg">My PLayStation</a>
                         </li>
                         <li class="ms-4">
                             <button type="button" class="pl-button fw-bold">Accedi</button>
@@ -77,6 +79,11 @@
           </nav>
        
     </header>
+
+    <main>
+
+
+    </main>
     
 </body>
 </html>
