banner-returnal setup

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
     </header>
 
     <main>
+        <!-- banner returnal -->
+        <section class="banner-returnal">
+            <div class="container">
+                <div class="row align-items-end banner-row">
+                    <div class="col-lg-5 mb-5">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, nulla! Cumque fugiat ea similique repellat possimus nihil quisquam reprehenderit aliquid delectus. Quaerat eveniet placeat neque officiis aperiam sed tempore iure!
+                    </div>
+                </div>
+                
+
+            </div>
+        </section>
+        
 
 
     </main>
