--- a/index.html
+++ b/index.html
@@ -85,8 +85,16 @@
         <section class="banner-returnal">
             <div class="container">
                 <div class="row align-items-end banner-row">
-                    <div class="col-lg-5 mb-5">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, nulla! Cumque fugiat ea similique repellat possimus nihil quisquam reprehenderit aliquid delectus. Quaerat eveniet placeat neque officiis aperiam sed tempore iure!
+                    <div class="col-lg-4 mb-5 returnal-description">
+                        <!-- logo returnal -->
+                        <img src="./img/returnal-hero-banner-logo.png" alt="">
+                        <!-- titolo -->
+                        <h2 class="mt-4">Rompi il cerchio</h2>
+                        <!-- paragrafo -->
+                        <p class="mt-4 fw-bold">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                        <a href="/">
+                            <button class="pl-button mt-3">Acquista ora</button>
+                        </a>
                     </div>
                 </div>
                 
