--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section class="banner-returnal">
             <div class="container">
                 <div class="row align-items-end banner-row">
-                    <div class="col-lg-4 mb-5 returnal-description">
+                    <div class="col-lg-5 mb-5 returnal-description">
                         <!-- logo returnal -->
                         <img src="./img/returnal-hero-banner-logo.png" alt="">
                         <!-- titolo -->
@@ -99,6 +99,19 @@
                 </div>
                 
 
+            </div>
+        </section>
+        <!-- games -->
+        <section>
+            <div class="container games">
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                </div>
             </div>
         </section>
         
