--- a/index.html
+++ b/index.html
@@ -103,14 +103,26 @@
         </section>
         <!-- games -->
         <section>
-            <div class="container games">
+            <div class="container games mt-4">
                 <div class="row">
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
-                    <div class="col-6 col-sm-4 col-lg-2">dggdf</div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
