--- a/index.html
+++ b/index.html
@@ -105,24 +105,24 @@
         <section>
             <div class="container games mt-4">
                 <div class="row">
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-4">
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
