section-writes setup

--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
                 </div>
             </div>
         </section>
+        <!-- writes -->
+        <section>
+            <div class="container text-center mt-5 pt-4">
+fsdf
+            </div>
+        </section>
         
 
 
