section-writes end

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <!-- logo returnal -->
                         <img src="./img/returnal-hero-banner-logo.png" alt="">
                         <!-- titolo -->
-                        <h2 class="mt-4">Rompi il cerchio</h2>
+                        <h2 class="mt-4 fw-bold">Rompi il cerchio</h2>
                         <!-- paragrafo -->
                         <p class="mt-4 fw-bold">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
                         <a href="/">
@@ -127,9 +127,11 @@
             </div>
         </section>
         <!-- writes -->
-        <section>
-            <div class="container text-center mt-5 pt-4">
-fsdf
+        <section class="writes my-5">
+            <div class="container text-center my-5 pt-4">
+                <div>PLAY HAS NO LIMITS</div>
+                <h2>Ecco la PlayStation 5</h2>
+                <p class="description-writes fs-5 fw-bold mt-4">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </div>
         </section>
         
