--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
                 <p class="description-writes fs-5 fw-bold mt-4">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </div>
         </section>
+        <!-- devices -->
+        <section>
+            <div class="container">
+                <!-- big device -->
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">dgdf</div>
+                    <div class="col-sm-12 col-md-6">dfgdgfdg</div>
+                </div>
+                <!-- small devices -->
+                <div class="row justify-content-center">
+                    <div class="col-2">fsff</div>
+                    <div class="col-2">fsff</div>
+                    <div class="col-2">fsff</div>
+                    <div class="col-2">fsff</div>
+                    <div class="col-2">fsff</div>
+
+                </div>
+            </div>
+        </section>
         
 
 
