devices top end

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
             </div>
         </section>
+
         <!-- games -->
         <section>
             <div class="container games mt-4">
@@ -126,31 +127,41 @@
                 </div>
             </div>
         </section>
+
         <!-- writes -->
-        <section class="writes my-5">
+        <section class="writes mt-5">
             <div class="container text-center my-5 pt-4">
                 <div>PLAY HAS NO LIMITS</div>
                 <h2>Ecco la PlayStation 5</h2>
                 <p class="description-writes fs-5 fw-bold mt-4">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </div>
         </section>
+
         <!-- devices -->
-        <section>
+        <section class="devices">
             <div class="container">
                 <!-- big device -->
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">dgdf</div>
-                    <div class="col-sm-12 col-md-6">dfgdgfdg</div>
+                <div class="row align-items-center">
+                    <div class="col-sm-12 col-md-4 mb-4 ">
+                        <h2>Console PlayStation 5</h2>
+                        <p class="description-writes mt-5 fw-bold">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                        <a href="/">
+                            <button class="pl-button mt-3">Maggiori informazioni</button>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-7 offset-md-1">
+                        <img src="./img/playstation-5-thumb.png" alt="">
+                    </div>
                 </div>
                 <!-- small devices -->
-                <div class="row justify-content-center">
+                <!-- <div class="row justify-content-center">
                     <div class="col-2">fsff</div>
                     <div class="col-2">fsff</div>
                     <div class="col-2">fsff</div>
                     <div class="col-2">fsff</div>
                     <div class="col-2">fsff</div>
 
-                </div>
+                </div> -->
             </div>
         </section>
         
