--- a/index.html
+++ b/index.html
@@ -154,14 +154,49 @@
                     </div>
                 </div>
                 <!-- small devices -->
-                <!-- <div class="row justify-content-center">
-                    <div class="col-2">fsff</div>
-                    <div class="col-2">fsff</div>
-                    <div class="col-2">fsff</div>
-                    <div class="col-2">fsff</div>
-                    <div class="col-2">fsff</div>
+                <div class="row justify-content-center mt-4">
+                    <div class="col-4 col-md-2">
+                        <div class="small-devices mx-auto">
+                            <img src="./img/playstation-5-thumb.png" alt="">
+                        </div>
+                        <div class="mt-3 text-center small-devices-description">
+                            Console PS5
+                        </div>                      
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="small-devices mx-auto">
+                            <img src="./img/joypad-thumb.png" alt="">
+                        </div>
+                        <div class="mt-3 text-center small-devices-description">
+                            Controller wireless DualSense
+                        </div>   
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="small-devices mx-auto">
+                            <img src="./img/headset-thumb.png" alt="">
+                        </div>
+                        <div class="mt-3 text-center small-devices-description">
+                            Cuffie Wireless con microfono PULSE
+                        </div> 
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="small-devices mx-auto">
+                            <img src="./img/remote-thumb.png" alt="">
+                        </div>
+                        <div class="mt-3 text-center small-devices-description">
+                            Telecomando Media
+                        </div> 
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="small-devices mx-auto">
+                            <img src="./img/camera-thumb.jpg" alt="">
+                        </div>
+                        <div class="mt-3 text-center small-devices-description">
+                            Telecamera HD
+                        </div> 
+                    </div>
 
-                </div> -->
+                </div>
             </div>
         </section>
         
