--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                 </div>
                 <!-- small devices -->
                 <div class="row justify-content-center mt-4">
-                    <div class="col-4 col-md-2">
+                    <!-- 1 -->
+                    <div class="col-4 col-md-2 device-container-active mb-3">
                         <div class="small-devices mx-auto">
                             <img src="./img/playstation-5-thumb.png" alt="">
                         </div>
@@ -163,7 +164,8 @@
                             Console PS5
                         </div>                      
                     </div>
-                    <div class="col-4 col-md-2">
+                    <!-- 2 -->
+                    <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
                             <img src="./img/joypad-thumb.png" alt="">
                         </div>
@@ -171,7 +173,8 @@
                             Controller wireless DualSense
                         </div>   
                     </div>
-                    <div class="col-4 col-md-2">
+                    <!-- 3 -->
+                    <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
                             <img src="./img/headset-thumb.png" alt="">
                         </div>
@@ -179,7 +182,8 @@
                             Cuffie Wireless con microfono PULSE
                         </div> 
                     </div>
-                    <div class="col-4 col-md-2">
+                    <!-- 4 -->
+                    <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
                             <img src="./img/remote-thumb.png" alt="">
                         </div>
@@ -187,7 +191,8 @@
                             Telecomando Media
                         </div> 
                     </div>
-                    <div class="col-4 col-md-2">
+                    <!-- 5 -->
+                    <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
                             <img src="./img/camera-thumb.jpg" alt="">
                         </div>
