--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
                             <button class="pl-button mt-3">Acquista ora</button>
                         </a>
                     </div>
-                </div>
-                
-
+                </div>   
             </div>
         </section>
 
@@ -202,6 +200,25 @@
                     </div>
 
                 </div>
+            </div>
+        </section>
+
+        <!-- banner itt -->
+        <section class="banner-itt mt-4">
+            <div class="container">
+                <div class="row align-items-end banner-row">
+                    <div class="col-lg-5 mb-5 itt-description">
+                        <!-- logo itt -->
+                        <img src="./img/it-takes-two-logo.png" alt="">
+                        <!-- titolo -->
+                        <h2 class="mt-4 fw-bold">Un'avventura cooperativa selvaggia ti attende</h2>
+                        <!-- paragrafo -->
+                        <p class="mt-4 fw-bold">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco di avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                        <a href="/">
+                            <button class="pl-button mt-3">Acquista ora</button>
+                        </a>
+                    </div>
+                </div>   
             </div>
         </section>
         
