section-newexits setup

--- a/index.html
+++ b/index.html
@@ -222,6 +222,27 @@
             </div>
         </section>
         
+        <!-- nuove uscite -->
+        <section class="new-exits">
+            <div class="container">
+                <!-- scritte -->
+                <!-- cards -->
+                <div class="row">
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                </div>
+            </div>
+        </section>
 
 
     </main>
