--- a/index.html
+++ b/index.html
@@ -226,20 +226,94 @@
         <section class="new-exits">
             <div class="container">
                 <!-- scritte -->
+                <h2 class="pt-4">Nuove uscite</h2>
+                <h4 class="fw-bold mt-3">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
                 <!-- cards -->
-                <div class="row">
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">dfgfgdag</a>
+                <div class="row mt-4 ne-cards pb-5">
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div>                 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div>
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div> 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div> 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>                  
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div> 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>                  
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's<i class="tm fas fa-trademark"></i> 
+                            ProSkater<i class="tm fas fa-trademark"></i>
+                            1 + 2
+                        </div> 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
