--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <img src="./img/joypad-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
-                            Controller wireless DualSense
+                            Controller wireless DualSense<i class="tm fas fa-trademark"></i>
                         </div>   
                     </div>
                     <!-- 3 -->
@@ -177,7 +177,7 @@
                             <img src="./img/headset-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
-                            Cuffie Wireless con microfono PULSE
+                            Cuffie Wireless con microfono PULSE<i class="tm fas fa-trademark"></i>
                         </div> 
                     </div>
                     <!-- 4 -->
@@ -317,6 +317,16 @@
                 </div>
             </div>
         </section>
+
+        <!-- writes -->
+        <section class="writes mt-5">
+            <div class="container text-center my-5 pt-4">
+                <h2>Esplora PlayStation<i class="tm far fa-registered"></i> 4</h2> 
+                <p class="description-writes fs-5 fw-bold mt-4">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per giocare sulla tua PS4</p>
+            </div>
+        </section>
+
+        <!-- ps4 devices -->
 
 
     </main>
