ps4 devices setup

--- a/index.html
+++ b/index.html
@@ -326,7 +326,16 @@
             </div>
         </section>
 
-        <!-- ps4 devices -->
+        <!-- ps4devices -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4">dff</div>
+                    <div class="col-12 col-md-4">dff</div>
+                    <div class="col-12 col-md-4">dff</div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
