--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
             <div class="container games mt-4">
                 <div class="row">
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img  class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                     </a>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                         </a>
                     </div>
                     <div class="col-sm-12 col-md-7 offset-md-1">
-                        <img src="./img/playstation-5-thumb.png" alt="">
+                        <img class="wd100 " src="./img/playstation-5-thumb.png" alt="">
                     </div>
                 </div>
                 <!-- small devices -->
@@ -156,7 +156,7 @@
                     <!-- 1 -->
                     <div class="col-4 col-md-2 device-container-active mb-3">
                         <div class="small-devices mx-auto">
-                            <img src="./img/playstation-5-thumb.png" alt="">
+                            <img class="wd100 " src="./img/playstation-5-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
                             Console PS5
@@ -165,7 +165,7 @@
                     <!-- 2 -->
                     <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
-                            <img src="./img/joypad-thumb.png" alt="">
+                            <img class="wd100 " src="./img/joypad-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
                             Controller wireless DualSense<i class="tm fas fa-trademark"></i>
@@ -174,7 +174,7 @@
                     <!-- 3 -->
                     <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
-                            <img src="./img/headset-thumb.png" alt="">
+                            <img class="wd100 " src="./img/headset-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
                             Cuffie Wireless con microfono PULSE<i class="tm fas fa-trademark"></i>
@@ -183,7 +183,7 @@
                     <!-- 4 -->
                     <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
-                            <img src="./img/remote-thumb.png" alt="">
+                            <img class="wd100 " src="./img/remote-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
                             Telecomando Media
@@ -192,7 +192,7 @@
                     <!-- 5 -->
                     <div class="col-4 col-md-2 device-container mb-3">
                         <div class="small-devices mx-auto">
-                            <img src="./img/camera-thumb.jpg" alt="">
+                            <img class="wd100 " src="./img/camera-thumb.jpg" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
                             Telecamera HD
@@ -327,12 +327,56 @@
         </section>
 
         <!-- ps4devices -->
-        <section>
+        <section class="ps4-device">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-4">dff</div>
-                    <div class="col-12 col-md-4">dff</div>
-                    <div class="col-12 col-md-4">dff</div>
+                    <!-- prodotto1 -->
+                    <div class="col-12 col-md-4 mb-5">
+                        <!-- image -->
+                        <div>
+                            <img class="wd100 " src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                        </div>
+                        <!-- description and button -->
+                        <a href="/">
+                            <h2>PlayStation 4</h2>
+                            <p class="description-writes fs-5 fw-bold mt-4">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                        </a>
+                        <a href="/">
+                            <button class="pl-button fw-bold mt-3">Scopri di più</button>
+                        </a>
+                    </div>
+
+                    <!-- prodotto2 -->
+                    <div class="col-12 col-md-4 mb-5">
+                        <!-- image -->
+                        <div>
+                            <img class="wd100 " src="./img/double11-202010-tw-psvr.jpg" alt="">
+                        </div>
+                        <!-- description and button -->
+                        <a href="/">
+                            <h2>PlayStation VR</h2>
+                            <p class="description-writes fs-5 fw-bold mt-4">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti</p>
+                        </a>
+                        <a href="/">
+                            <button class="pl-button fw-bold mt-3">Scopri di più</button>
+                        </a>
+                    </div>
+
+                    <!-- prodotto3 -->
+                    <div class="col-12 col-md-4 mb-5">
+                        <!-- image -->
+                        <div>
+                            <img class="wd100 " src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                        </div>
+                        <!-- description and button -->
+                        <a href="/">
+                            <h2>Accessori</h2>
+                            <p class="description-writes fs-5 fw-bold mt-4">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        </a>
+                        <a href="/">
+                            <button class="pl-button fw-bold mt-3">Scopri di più</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
