playstation-plus setup

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <!-- small devices -->
-                <div class="row justify-content-center mt-4">
+                <div class="row justify-content-md-between mt-4">
                     <!-- 1 -->
                     <div class="col-4 col-md-2 device-container-active mb-3">
                         <div class="small-devices mx-auto">
@@ -381,8 +381,20 @@
             </div>
         </section>
 
+        <!-- playstation plus -->
+        <section class="playstation-plus">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-7">ggjgj</div>
+                    <div class="col-md-5 none-image">gjgjhgj</div>
+                </div>
+            </div>
+            
+        </section>
+
 
     </main>
     
 </body>
 </html>
+
