playstation-plus end

--- a/index.html
+++ b/index.html
@@ -385,8 +385,21 @@
         <section class="playstation-plus">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-7">ggjgj</div>
-                    <div class="col-md-5 none-image">gjgjhgj</div>
+                    <!-- left -->
+                    <div class="col-sm-12 col-md-5 align-self-center my-4">
+                        <div>
+                            <img class="plus-logo-image" src="./img/ps-plus-logo.png" alt="">
+                        </div>
+                        <p class="mt-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi ed altro ancora.</p>
+                        <a href="/"><button class="pl-button fw-bold mt-3">Esplora PlayStation plus</button></a>            
+                    </div>
+                    <!-- right -->
+                    <div class="col-md-7 none-image">
+                        <div>
+                            <img class="wd100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             
