writes sconti e sconti image setup

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </section>
 
         <!-- playstation plus -->
-        <section class="playstation-plus">
+        <section class="playstation-plus mt-4">
             <div class="container">
                 <div class="row">
                     <!-- left -->
@@ -405,6 +405,24 @@
             
         </section>
 
+        <!-- writes sconti-->
+        <section class="writes mt-5">
+            <div class="container text-center my-5 pt-4">
+                <h2 class="fw-bold">Nuovi sconti sul PlayStation Store</h2> 
+                <p class="description-writes fs-5 fw-bold mt-4">Sconti pazzeschi, collezioni curate e saldi stagionali su PS4, PS5 e PS VR, tutti in un unico posto.</p>
+            </div>
+        </section>
+
+        <!-- sconti image -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">dfdff</div>
+                    <div class="col-sm-12 col-md-4">dfdff</div>
+                    <div class="col-sm-12 col-md-4">dfdff</div>
+                </div>
+            </div>
+        </section>
 
     </main>
     
