sconti-image end

--- a/index.html
+++ b/index.html
@@ -414,12 +414,18 @@
         </section>
 
         <!-- sconti image -->
-        <section>
+        <section class="mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-4">dfdff</div>
-                    <div class="col-sm-12 col-md-4">dfdff</div>
-                    <div class="col-sm-12 col-md-4">dfdff</div>
+                    <div class="col-sm-12 col-md-4 mb-5">
+                        <img class="wd100" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-4 mb-5">
+                        <img class="wd100" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-4 mb-5">
+                        <img class="wd100" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
