--- a/index.html
+++ b/index.html
@@ -453,6 +453,25 @@
             </div>
             
         </section>
+
+        <!-- social -->
+        <section class="mt-5">
+            <div class="container">
+                <!-- titolo -->
+                <h3 class="fs-2 fw-bold text-center">Seguici sui social media</h3>
+                <!-- social image -->
+                <div class="row justify-content-center">
+                    <div class="col-6 col-sm-2">dff</div>
+                    <div class="col-6 col-sm-2">dff</div>
+                    <div class="col-6 col-sm-2">dff</div>
+                    <div class="col-6 col-sm-2">dff</div>
+                </div>
+            </div>
+        </section>
+
+
+
+
     </main>
     
 </body>
