--- a/index.html
+++ b/index.html
@@ -456,15 +456,23 @@
 
         <!-- social -->
         <section class="mt-5">
-            <div class="container">
+            <div class="container-fluid ">
                 <!-- titolo -->
-                <h3 class="fs-2 fw-bold text-center">Seguici sui social media</h3>
+                <h3 class="fs-2 fw-bold text-center pb-4">Seguici sui social media</h3>
                 <!-- social image -->
-                <div class="row justify-content-center">
-                    <div class="col-6 col-sm-2">dff</div>
-                    <div class="col-6 col-sm-2">dff</div>
-                    <div class="col-6 col-sm-2">dff</div>
-                    <div class="col-6 col-sm-2">dff</div>
+                <div class="row justify-content-center mt-5 social-cont">
+                    <div class="col-6 col-sm-2  mb-4">
+                        <img class="wd100" src="./img/twitter.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-2  mb-4">
+                        <img class="wd100" src="./img/facebook.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-2  mb-4">
+                        <img class="wd100" src="./img/instagram.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-2  mb-4">
+                        <img class="wd100" src="./img/youtube.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
