--- a/index.html
+++ b/index.html
@@ -476,11 +476,20 @@
                 </div>
             </div>
         </section>
-
-
-
-
     </main>
+
+    <footer class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">gfgfg</div>
+                <div class="col-12 col-md-4 col-lg-2">fgfg</div>
+                <div class="col-12 col-md-4 col-lg-2">fgfg</div>
+                <div class="col-12 col-md-4 col-lg-2">fgfg</div>
+                <div class="col-12 col-lg-6">fgfg</div>
+            </div>
+        </div>
+        
+    </footer>
     
 </body>
 </html>
